fix card shadow on mobile

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -23,7 +23,7 @@ p {
   flex-direction: column;
 
   padding: 2rem;
-  box-shadow: 0 4px 8px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .root {
